<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".fragments.homeFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textSize="30sp"
                android:text="@string/keep_notes" />

            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="150dp"
                android:elevation="2dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="305dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/profile" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:layout_marginTop="60dp"
                android:layout_marginStart="22dp"
                android:text="Welcome Guest!"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/searchField"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginVertical="120dp"
                android:textColor="@color/white"
                android:hint="@string/search"
                android:layout_marginTop="30dp"
                android:paddingLeft="10dp"
                android:background="@drawable/search_bar_shape"
                android:drawableStart="@drawable/baseline_search_24"
                android:drawablePadding="25dp"
                android:textColorHint="@color/white"
                android:inputType="text"
                android:imeOptions="actionSearch"/>

            <HorizontalScrollView
                android:id="@+id/horizontalScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:layout_marginTop="195dp"
                app:layout_constraintTop_toBottomOf="@id/searchField">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp">

                    <TextView
                        android:id="@+id/All"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:text="@string/all"
                        android:textSize="15sp"
                        android:background="@drawable/category_bar_shape"/>

                    <TextView
                        android:id="@+id/personal"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:text="@string/personal"
                        android:textSize="15sp"
                        android:background="@drawable/category_bar_shape"/>

                    <TextView
                        android:id="@+id/home"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:text="@string/home"
                        android:textSize="15sp"
                        android:background="@drawable/category_bar_shape"/>

                    <TextView
                        android:id="@+id/school"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:text="@string/school"
                        android:textSize="15sp"
                        android:background="@drawable/category_bar_shape"/>

                    <TextView
                        android:id="@+id/love"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:text="@string/love"
                        android:textSize="15sp"
                        android:background="@drawable/category_bar_shape"/>

                    <TextView
                        android:id="@+id/study"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:text="@string/study"
                        android:textSize="15sp"
                        android:background="@drawable/category_bar_shape"/>

                </LinearLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/add"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="620dp"
                android:layout_marginStart="295dp"
                android:gravity="center"
                android:elevation="4dp"
                android:background="@drawable/nav_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.592">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_add_24" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:orientation="vertical"
                android:paddingHorizontal="13dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontalScroll"
                app:spanCount="2"
                tools:itemCount="10"
                tools:listitem="@layout/notes_layout" />

        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>